@@ -5,16 +5,21 @@ import med.voll.api.projeto.*;
 import med.voll.api.usuario.Usuario;
 import med.voll.api.usuario.UsuarioRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("Projeto")
@@ -31,9 +36,12 @@ public class ProjetoController {
     }
 
     @CrossOrigin("*")
-    @GetMapping
-    public List<DadosListagemProjeto> listarProjeto(){
-        return repository.findAll().stream().map(DadosListagemProjeto::new).toList();
+    @GetMapping("/porUsuario/{id}")
+    public List<DadosListagemProjeto> listarProjeto(@PathVariable Long id) {
+        return repository.findByGestor(id)
+                .stream()
+                .map(DadosListagemProjeto::new)
+                .collect(Collectors.toList());
     }
 
     @PutMapping("/{id}")
@@ -43,18 +51,6 @@ public class ProjetoController {
         projeto.atualizarInformacoes(dadosAtualizarProjeto);
         return ResponseEntity.ok().build();
     }
-
-//    @PutMapping("/atualizar/{id}")
-//    @Transactional
-//    public ResponseEntity<Void> atualizarProjeto(@PathVariable Long id, @RequestBody @Valid DadosAtualizarProjeto dadosAtualizarProjeto) {
-//        try {
-//            var projeto = repository.getReferenceById(id);
-//            projeto.atualizarInformacoes(dadosAtualizarProjeto);
-//            return ResponseEntity.ok().build();
-//        } catch (Exception e) {
-//            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-//        }
-//    }
 
     @DeleteMapping("/{id}")
     @Transactional
